test/netlist/error/nested-output-size.bop
A(a, b) = (c, d)
where
  c = And(a, b);
  d = Or(a, b);
end where;

B(a, b) = c
where
  c = Not(A(a, b));
end where;
